--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           ></path></svg>
       </a>
       <a href="#" class="profile-icon-link"
-        ><img src="images/nitinprofilephoto.jpg" alt="User profile photo" width="48" height="40"
+        ><img src="images/nitinprofilephoto.JPG" alt="User profile photo" width="48" height="40"
       /></a>
     </header>
 	<div id="space">
